@@ -1,3 +1,11 @@
+2006-07-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/devdescr.cc: Fix various things in the device desriptors,
+	mostly affecting devices with the new EEPROM register layout:
+	. use correct (according to AVR Studio) EECRaddress
+	. use correct start of SRAM for ATmegaxx0/1
+	. add EINDaddr for ATmegaxx0/1
+
 2006-05-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* src/devdescr.cc: Add ATmega2560/2561.
